--- a/style.css
+++ b/style.css
@@ -7,11 +7,12 @@ h1, h2, h3, h4, h5, h6 {
     }
 .page        { 
 	bottom:0; 
-//	padding-top:200px;
 	position:absolute; 
 	text-align:center;
 	top:0;  
 	width:100%; 
+	height: 100%;
+
 }
 
 
@@ -41,6 +42,9 @@ h1, h2, h3, h4, h5, h6 {
   max-width: 400px;
   padding: 15px;
   margin: 0 auto;
+  height: 1400px;
+  overflow-y: auto;
+
 }
 
 .form-addressReported {
